[workspace]
members = [
    "awaken",
    "clocksource",
    "heatmap",
    "heatmap2",
    "histogram",
    "metriken",
    "metriken/derive",
    "ratelimit",
    "ringlog",
    "switchboard",
    "waterfall",
]

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
