[workspace]
resolver="2"
members = [
    "awaken",
    "clocksource",
    "heatmap",
    "histogram",
    "metriken",
    "metriken/derive",
    "ratelimit",
    "ringlog",
    "switchboard",
    "waterfall",
]

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
