[workspace]
resolver="2"
members = [
    "awaken",
    "clocksource",
    "histogram",
    "metriken",
    "metriken/derive",
    "metriken/core",
    "ratelimit",
    "ringlog",
    "switchboard",
]

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
