[package]
name = "rustcommon-atomics"
version = "1.0.2"
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Atomic primitives unified by traits"
homepage = "https://github.com/pelikan-io/rustcommon/atomics"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
serde = { version = "1.0.144", optional = true }

[features]
default = ["serde"]
