[package]
name = "clocksource"
version = "0.6.0"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
description = "Library for reading from different system clocks"
license = "Apache-2.0"
homepage = "https://github.com/pelikan-io/rustcommon/time"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
libc = "0.2.132"
time = { version = "0.3.14", features = ["formatting"] }

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["profileapi", "sysinfoapi"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach = "0.3.2"

[target.'cfg(all(not(windows), not(unix), not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "benches"
harness = false
