[package]
name = "clocksource"
version = "0.7.0"
edition = "2021"
authors = ["Brian Martin <brian@iop.systems>"]
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.147"
time = { version = "0.3.27", features = ["formatting"] }
