[package]
name = "clocksource"
version = "0.8.2"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
description = "Library for times and durations with fixed-size representations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
libc = "0.2.147"
time = { version = "0.3.36", features = ["formatting"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "profileapi", "sysinfoapi"] }
