[package]
name = "heatmap"
version = "0.7.0"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Heatmap datastructure for tracking distributions across a time window"
homepage = "https://github.com/pelikan-io/rustcommon/heatmap"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = "0.6.0"
histogram = "0.7.0"
thiserror = "1.0.34"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "heatmap"
harness = false
