[package]
name = "heatmap"
version = "0.7.5"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Heatmap datastructure for tracking distributions across a time window"
homepage = "https://github.com/pelikan-io/rustcommon/heatmap"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.6.0", path = "../clocksource" }
histogram = { version = "0.7.3", path = "../histogram" }
parking_lot = "0.12.1"
thiserror = "1.0.34"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "heatmap"
harness = false
