[package]
name = "heatmap"
version = "0.8.0"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Deprecated. Use histogram crate directly"
homepage = "https://github.com/pelikan-io/rustcommon/heatmap"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
