[package]
name = "heatmap2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
parking_lot = "*"
clocksource = { version = "0.7.0", path = "../clocksource" }

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.3", features = ["flamegraph"] }

[[bench]]
name = "histogram"
harness = false
