[package]
name = "histogram"
version = "0.8.0"
edition = "2021"
authors = ["Brian Martin <brian@pelikan.io>"]
license = "MIT OR Apache-2.0"
description = "A collection of histogram data structures"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.7.1", path = "../clocksource" }
serde = { version = "1.0.144", features = ["derive"], optional = true }
thiserror = "1.0.47"

[features]
default = ["serde"]
serde = ["dep:serde"]

[[bench]]
name = "histogram"
harness = false

[dev-dependencies]
criterion = "0.3"
serde_json = "*"
