[package]
name = "histogram"
version = "0.8.0"
edition = "2021"
authors = ["Brian Martin <brian@pelikan.io>"]
license = "MIT OR Apache-2.0"
description = "A collection of histogram data structures"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
thiserror = "1.0.47"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "histogram"
harness = false
