[package]
name = "histogram"
version = "0.9.1"
edition = "2021"
authors = ["Brian Martin <brian@pelikan.io>"]
license = "MIT OR Apache-2.0"
description = "A collection of histogram data structures"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
schemars = { version = "0.8", optional = true }
serde = { version = "1.0.144", features = ["derive"], optional = true }
thiserror = "1.0.47"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
schemars = ["dep:schemars", "serde"]
serde = ["dep:serde"]

[[bench]]
name = "histogram"
harness = false
