[package]
name = "metriken"
version = "0.5.0"
edition = "2021"
authors = [
	"Brian Martin <brian@iop.systems>",
	"Sean Lynch <sean@iop.systems>",
]
license = "Apache-2.0"
description = "A fast and lightweight metrics library"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
metriken-core = { version = "0.1", path = "core" }
metriken-derive = { version = "=0.5.0", path = "./derive" }
histogram = { version = "0.9.0", path = "../histogram" }

once_cell = "1.14.0"
parking_lot = "0.12.1"

[dev-dependencies]
trybuild = "1.0"
