[package]
name = "ratelimit"
version = "0.6.0"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A simple thread-safe ratelimiter"
homepage = "https://github.com/pelikan-io/rustcommon/ratelimit"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.6.0", path = "../clocksource" }
