[package]
name = "ratelimit"
version = "0.5.1"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Token bucket ratelimiter"
homepage = "https://github.com/pelikan-io/rustcommon/ratelimit"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.7.0", path = "../clocksource" }
rand = "0.8.5"
rand_distr = "0.4.3"
