[package]
name = "ratelimit"
version = "0.9.0"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple ratelimiter that can be shared between threads"
homepage = "https://github.com/pelikan-io/rustcommon/ratelimit"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.8.0", path = "../clocksource" }
parking_lot = "0.12.1"
thiserror = "1.0.40"
