[package]
name = "ringlog"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Brian Martin <brian@pelikan.io>"]
description = "A fast and lightweight non-blocking logging framework"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
ahash = "0.8.0"
clocksource = { version = "0.8.0", path = "../clocksource" }
metriken = { version = "0.5.1", path = "../metriken" }
log = { version = "0.4.17", features = ["std"] }
mpmc = "0.1.6"
