[package]
name = "rustcommon-streamstats"
version = "0.1.2"
authors = ["Brian Martin <brayniac@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Statistics calculated for a stream of samples"
homepage = "https://github.com/pelikan-io/rustcommon/streamstats"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
rustcommon-atomics = { path = "../atomics" }
thiserror = "1.0.34"
