[package]
name = "switchboard"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Brian Martin <brian@pelikan.io>"]
description = "Enables inter-process communiucation via queues and wakers"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
awaken = "0.1.0"
crossbeam-queue = "0.3.8"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
mio = { version = "0.8.5", features = ["os-poll"]}
