[package]
name = "waterfall"
version = "0.8.1"
authors = ["Brian Martin <brian@pelikan.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Generates waterfalls from heatmaps"
homepage = "https://github.com/pelikan-io/rustcommon/waterfall"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
clocksource = { version = "0.6.0" }
dejavu = "2.37.0"
image = "0.24.3"
log = "0.4.17"
heatmap = { version = "0.7.1", path = "../heatmap" }
histogram = { version = "0.7.1", path = "../histogram" }
rusttype = "0.9.2"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
