[package]
name = "metriken-derive"
version = "0.2.0"
edition = "2021"
authors = ["Brian Martin <brian@iop.systems>"]
license = "MIT OR Apache-2.0"
description = "proc_macros for metriken"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.64"
proc-macro-crate = "1.3.1"
quote = "1.0.29"
syn = { version = "2.0.25", features = ["full", "parsing"] }
